--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,5 +1,5 @@
 [data-md-color-primary="orange"]{
-    --md-typeset-a-color: #f28500
+    --md-typeset-a-color: #FF6F3C
 }
 
 [data-md-color-primary="blue"]{
